# fraud-prediction

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: fraud_detection.ipynb
