[project]
name = "fraudprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.0.2",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "mlxtend>=0.23.4",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "sqlalchemy>=2.0.40",
]
