[project]
name = "fraudprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "datasets>=3.5.0",
    "ipython>=9.0.2",
    "ipywidgets>=8.1.6",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "mlflow>=2.22.0",
    "mlxtend>=0.23.4",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "optuna>=4.2.1",
    "optuna-integration[xgboost]>=4.2.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "sqlalchemy>=2.0.40",
    "wandb>=0.19.9",
    "xgboost>=3.0.0",
]
